--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 											ferramentas e conceitos envolvendo a Análise de Dados. <br />Sinta-se à vontade para entrar em contato através dos links no final da página.</p>
 									</div>
 									<span class="image object">
-										<img src="images/profile_picture.jpeg" alt="" />
+										<img src="images/profile_picture_2.jpg" alt="" />
 									</span>
 								</section>
 								
