--- a/index.html
+++ b/index.html
@@ -40,11 +40,18 @@
 												Projetos de Análise de Dados.</h1>
 											
 										</header>
-										<p>Nessa página demonstro minhas habilidades de resolver problemas de negócio
+										<p>
+											Nessa página demonstro minhas habilidades de resolver problemas de negócio
 											utilizando conceitos e ferramentas da Análise de Dados através de projetos com dados
-											públicos. <br />
-										Você vai encontrar também minhas experiências profissionais, habilidades,
-											ferramentas e conceitos envolvendo a Análise de Dados. <br />Sinta-se à vontade para entrar em contato através dos links no final da página.</p>
+											públicos.
+										</p>
+										<p> 
+											Você vai encontrar também minhas experiências profissionais, habilidades,
+											ferramentas e conceitos envolvendo a Análise de Dados. 
+										</p>
+										<p>
+											Sinta-se à vontade para entrar em contato através dos links no final da página.
+										</p>	
 									</div>
 									<span class="image object">
 										<img src="images/profile_picture_2.jpg" alt="" />
