atualizacao exp profissionais

--- a/index.html
+++ b/index.html
@@ -144,12 +144,23 @@
 
 
 										<h2 id="content">1+ Product Owner</h2>
-										<p>Suporte às equipes conforme necessário, enfatizando a comunicação e a transparência, enquanto responsável pelo planejamento e execução de atividades dentro dos prazos estipulados. Participação ativa das dinâmicas de grupo da Startup e solução de problemas dos clientes e do cotidiano com gentileza e autonomia, além de apoio em tarefas administrativas, otimizando a eficiência da equipe e promovendo um bom relacionamento entre todos.
-
-											Experiência também com gerenciamento de tempo, priorização de tarefas, negociação de atividades, além de compartilhar conhecimento e olhar o objetivo do time e da Empresa.</p>
+										<p>
+											Suporte às equipes conforme necessário, enfatizando a comunicação e a transparência, enquanto responsável pelo planejamento e execução de atividades dentro dos prazos estipulados.
+										</p> 
+										<p>
+											Participação ativa das dinâmicas de grupo da Startup e solução de problemas dos clientes e do cotidiano com gentileza e autonomia, além de apoio em tarefas administrativas, otimizando a eficiência da equipe e promovendo um bom relacionamento entre todos.
+										</p>
+										<p>
+											Experiência também com gerenciamento de tempo, priorização de tarefas, negociação de atividades, além de compartilhar conhecimento e olhar o objetivo do time e da Empresa.
+										</p>
+										<p>
+											Trabalho realizado com Metodologia Ágil e Scrum adaptadas à Startup, além do Monday para organização geral e gestão de equipes nos seguintes Projetos: "Pinton Bolsas", "Mami Wata", "Camila Maciel", "Kids2gether", "a4tunados", "KidsCFOaaS", "Roland`s Rio Birthday", "Lá do Sítio", "ScaleClock", "veTI".
+										</p>
 
 										<h2 id="content">1+ Desenvolvedor</h2>
-										<p>Escrever minha experiência como dev. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aenean pharetra magna ac placerat vestibulum lectus. Vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Tempus quam pellentesque nec nam aliquam sem. Imperdiet dui accumsan sit amet nulla facilisi morbi. Ut eu sem integer vitae justo. Accumsan tortor posuere ac ut consequat semper viverra nam libero. Morbi tincidunt ornare massa eget egestas purus viverra accumsan in. Ut enim blandit volutpat maecenas volutpat blandit. Sagittis eu volutpat odio facilisis mauris. Est pellentesque elit ullamcorper dignissim. Arcu dui vivamus arcu felis bibendum. Nulla porttitor massa id neque aliquam vestibulum morbi blandit. Consectetur purus ut faucibus pulvinar. Sed tempus urna et pharetra pharetra massa.</p>
+										<p>
+											Participação ativa nos Projetos "NESFA", "Pinton Bolsas", "Mami Wata", "Camila Maciel", "Kids2gether", "Roland`s Rio Birthday" utilizando HTML, CSS, JavaScript, Shopify, Meta Business, Bubble, Thunkable, Wix, Figma e AWS.
+										</p>
 
 										
 										</section>
