updates exp profissionais

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
 										<h2 id="content">1+ Desenvolvedor</h2>
 										<p>
-											Participação ativa nos Projetos "NESFA", "Pinton Bolsas", "Mami Wata", "Camila Maciel", "Kids2gether", "Roland`s Rio Birthday" utilizando HTML, CSS, JavaScript, Shopify, Meta Business, Bubble, Thunkable, Wix, Figma e AWS.
+											Participação ativa nos Projetos "NESFA", "Pinton Bolsas", "Mami Wata", "Camila Maciel", "Kids2gether", "Roland`s Rio Birthday" utilizando HTML, CSS, JavaScript, Shopify, Meta Business, Bubble, Thunkable, Wix, Figma, AWS, VS Code, Git e GitHub.
 										</p>
 
 										
