--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 									</header>
 									<p>Sinta-se à vontade para entrar em contato</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">gmkcameron84@gmail.com</a></li>
+										<li class="icon solid fa-envelope"><a href="mailto:gmkcameron84@gmail.com">gmkcameron84@gmail.com</a></li>
 										<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/guilherme-cameron/">LinkedIn</a></li>
 										<li class="icon brands fa-medium"><a href="">Blog Pessoal</a></li>
 									</ul>
