update link Medium

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="mailto:gmkcameron84@gmail.com">gmkcameron84@gmail.com</a></li>
 										<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/guilherme-cameron/">LinkedIn</a></li>
-										<li class="icon brands fa-medium"><a href="">Blog Pessoal</a></li>
+										<li class="icon brands fa-medium"><a href="https://medium.com/@gmkcameron84">Medium</a></li>
 									</ul>
 								</section>
 						</div>
