--- a/index.html
+++ b/index.html
@@ -90,10 +90,7 @@
 											<div class="content">
 												<h2>Linguagens de Programação e Banco de Dados</h2>
 												<ul>
-													<li>Python com foco em análise de dados</li>
-													<li>SQL para extração de dados</li>
-													<li>Lorem ipsum dolor sit amet</li>
-													<li>Consectetur adipiscing elit</li>
+													<li>SQL Language</li>
 												</ul>
 											</div>
 										</article>
@@ -128,8 +125,7 @@
 												<ul>
 													<li>Git, Github</li>
 													<li>VS Code</li>
-													<li>Auctor urna nunc id</li>
-													<li>Commodo viverra maecenas accumsan</li>
+													<li>SQLite3 Database</li>
 												</ul>
 											</div>
 										</article>
