--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 												<h2>Engenharia de Software</h2>
 												<ul>
 													<li>Git, Github</li>
-													<li>VS Code</li>
+													<li>Visual Studio Code</li>
 													<li>SQLite3 Database</li>
 												</ul>
 											</div>
